--- a/ultra_ssdbox_manager.ui
+++ b/ultra_ssdbox_manager.ui
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>main_interface</class>
+ <widget class="QDialog" name="main_interface">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>474</width>
-    <height>363</height>
+    <width>494</width>
+    <height>362</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>R-SODIUM Ultra SSD Enclosure Manager</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="usm.qrc">
+    <normaloff>:/img/icon.ico</normaloff>:/img/icon.ico</iconset>
   </property>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
@@ -46,13 +50,13 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="usm.qrc">:/logo/logo.svg</pixmap>
+    <pixmap resource="usm.qrc">:/img/logo.svg</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
    <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <set>Qt::AlignmentFlag::AlignCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="overview_button">
@@ -106,7 +110,7 @@
     </font>
    </property>
    <property name="autoFillBackground">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Box Mode</string>
@@ -130,7 +134,7 @@
     <string>About</string>
    </property>
   </widget>
-  <widget class="QGroupBox" name="raidconfig">
+  <widget class="QGroupBox" name="sataconfig">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -138,7 +142,7 @@
     <rect>
      <x>170</x>
      <y>10</y>
-     <width>291</width>
+     <width>311</width>
      <height>341</height>
     </rect>
    </property>
@@ -159,7 +163,7 @@
    <widget class="QCheckBox" name="JBOD">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>40</x>
       <y>136</y>
       <width>111</width>
       <height>19</height>
@@ -172,7 +176,7 @@
    <widget class="QCheckBox" name="R1">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>40</x>
       <y>106</y>
       <width>80</width>
       <height>19</height>
@@ -185,7 +189,7 @@
    <widget class="QCheckBox" name="R0">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>40</x>
       <y>76</y>
       <width>80</width>
       <height>19</height>
@@ -198,7 +202,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>60</x>
       <y>26</y>
       <width>191</width>
       <height>41</height>
@@ -214,13 +218,13 @@
      <string>ASM1352R RAID Config</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <set>Qt::AlignmentFlag::AlignCenter</set>
     </property>
    </widget>
    <widget class="QCheckBox" name="PM">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>40</x>
       <y>166</y>
       <width>111</width>
       <height>19</height>
@@ -236,10 +240,10 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="raid_execute">
+   <widget class="QPushButton" name="sata_execute">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>200</x>
       <y>280</y>
       <width>91</width>
       <height>41</height>
@@ -254,7 +258,7 @@
      <rect>
       <x>160</x>
       <y>216</y>
-      <width>51</width>
+      <width>61</width>
       <height>31</height>
      </rect>
     </property>
@@ -268,7 +272,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>215</y>
       <width>141</width>
       <height>31</height>
@@ -287,23 +291,210 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>230</x>
       <y>220</y>
       <width>53</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>second.</string>
+     <string>second/s.</string>
     </property>
    </widget>
   </widget>
+  <widget class="QGroupBox" name="boxmode">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>9</y>
+     <width>311</width>
+     <height>341</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string/>
+   </property>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>30</y>
+      <width>171</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Enclosure Mode</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignmentFlag::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="combinemode">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>80</y>
+      <width>231</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Combine Mode (NVMe + SATA)</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="nvmeonly">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>110</y>
+      <width>231</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>NVMe Only</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="sataonly">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>140</y>
+      <width>231</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>SATA Only</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>170</y>
+      <width>171</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Other Configuration</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignmentFlag::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="physicalenable">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>240</y>
+      <width>271</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Physical switch can still change modes.</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="storageconfig">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>210</y>
+      <width>261</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Keep mode config for next power up.</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="boxmode_execute">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>280</y>
+      <width>91</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Execute</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="overview">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>9</y>
+     <width>311</width>
+     <height>341</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QGroupBox" name="about">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>10</y>
+     <width>311</width>
+     <height>341</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string/>
+   </property>
+  </widget>
+  <zorder>sataconfig</zorder>
+  <zorder>overview</zorder>
+  <zorder>about</zorder>
   <zorder>overview_button</zorder>
   <zorder>label_2</zorder>
   <zorder>SATA_Interface_button</zorder>
   <zorder>boxmode_button</zorder>
   <zorder>about_button</zorder>
-  <zorder>raidconfig</zorder>
+  <zorder>boxmode</zorder>
  </widget>
  <resources>
   <include location="usm.qrc"/>
