--- a/ultra_enclosure_manager.ui
+++ b/ultra_enclosure_manager.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>494</width>
-    <height>362</height>
+    <height>375</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -63,7 +63,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>120</y>
+     <y>130</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -81,7 +81,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>240</y>
+     <y>250</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -99,7 +99,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>180</y>
+     <y>190</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -120,7 +120,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>300</y>
+     <y>310</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -143,7 +143,7 @@
      <x>170</x>
      <y>10</y>
      <width>311</width>
-     <height>341</height>
+     <height>351</height>
     </rect>
    </property>
    <property name="font">
@@ -244,7 +244,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>280</y>
+      <y>290</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -306,9 +306,9 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>9</y>
+     <y>10</y>
      <width>311</width>
-     <height>341</height>
+     <height>351</height>
     </rect>
    </property>
    <property name="title">
@@ -318,7 +318,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>30</y>
+      <y>20</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -339,7 +339,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>80</y>
+      <y>60</y>
       <width>231</width>
       <height>21</height>
      </rect>
@@ -357,7 +357,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>110</y>
+      <y>90</y>
       <width>231</width>
       <height>21</height>
      </rect>
@@ -375,7 +375,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>140</y>
+      <y>120</y>
       <width>231</width>
       <height>21</height>
      </rect>
@@ -393,7 +393,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>170</y>
+      <y>180</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -414,7 +414,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>240</y>
+      <y>250</y>
       <width>271</width>
       <height>21</height>
      </rect>
@@ -432,7 +432,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>210</y>
+      <y>220</y>
       <width>261</width>
       <height>21</height>
      </rect>
@@ -450,7 +450,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>280</y>
+      <y>290</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -459,14 +459,32 @@
      <string>Execute</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="hubonly">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>150</y>
+      <width>231</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Hub Only (No disk connected)</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="overview">
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>9</y>
+     <y>10</y>
      <width>311</width>
-     <height>341</height>
+     <height>351</height>
     </rect>
    </property>
    <property name="title">
@@ -479,14 +497,13 @@
      <x>170</x>
      <y>10</y>
      <width>311</width>
-     <height>341</height>
+     <height>351</height>
     </rect>
    </property>
    <property name="title">
     <string/>
    </property>
   </widget>
-  <zorder>sataconfig</zorder>
   <zorder>overview</zorder>
   <zorder>about</zorder>
   <zorder>overview_button</zorder>
@@ -495,6 +512,7 @@
   <zorder>boxmode_button</zorder>
   <zorder>about_button</zorder>
   <zorder>boxmode</zorder>
+  <zorder>sataconfig</zorder>
  </widget>
  <resources>
   <include location="usm.qrc"/>
