--- a/usm.qrc
+++ b/usm.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="img">
     <file>icon.ico</file>
+    <file>icon-non-background.png</file>
     <file>logo.svg</file>
   </qresource>
 </RCC>
