--- a/ultra_enclosure_manager.ui
+++ b/ultra_enclosure_manager.ui
@@ -188,7 +188,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-121</y>
+       <y>0</y>
        <width>297</width>
        <height>470</height>
       </rect>
@@ -474,7 +474,7 @@ may not support this function!</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-286</y>
+       <y>0</y>
        <width>297</width>
        <height>635</height>
       </rect>
@@ -486,7 +486,7 @@ may not support this function!</string>
       </size>
      </property>
      <property name="autoFillBackground">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <widget class="QPushButton" name="boxmode_execute">
       <property name="geometry">
@@ -1229,8 +1229,8 @@ R-SODIUM-Ultra-Enclosure-Manager</string>
   <zorder>about_button</zorder>
   <zorder>overview</zorder>
   <zorder>sataconfig</zorder>
-  <zorder>boxmode</zorder>
   <zorder>about</zorder>
+  <zorder>boxmode</zorder>
  </widget>
  <resources>
   <include location="usm.qrc"/>
