--- a/ultra_enclosure_manager.ui
+++ b/ultra_enclosure_manager.ui
@@ -268,6 +268,9 @@
       <property name="maximum">
        <number>10</number>
       </property>
+      <property name="value">
+       <number>0</number>
+      </property>
      </widget>
      <widget class="QLabel" name="label_20">
       <property name="geometry">
