--- a/ultra_enclosure_manager.ui
+++ b/ultra_enclosure_manager.ui
@@ -256,9 +256,9 @@
      <widget class="QSpinBox" name="powertime">
       <property name="geometry">
        <rect>
-        <x>150</x>
+        <x>155</x>
         <y>356</y>
-        <width>61</width>
+        <width>60</width>
         <height>31</height>
        </rect>
       </property>
@@ -399,9 +399,9 @@ may not support this function!</string>
      <widget class="QLabel" name="label_21">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>30</x>
         <y>290</y>
-        <width>270</width>
+        <width>250</width>
         <height>2</height>
        </rect>
       </property>
@@ -477,7 +477,7 @@ may not support this function!</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-171</y>
+       <y>0</y>
        <width>297</width>
        <height>520</height>
       </rect>
@@ -546,7 +546,7 @@ may not support this function!</string>
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QGroupBox" name="groupBox">
+     <widget class="QGroupBox" name="selfpowered_groupbox">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -619,7 +619,7 @@ may not support this function!</string>
        </property>
       </widget>
      </widget>
-     <widget class="QGroupBox" name="groupBox_2">
+     <widget class="QGroupBox" name="extpowered_groupbox">
       <property name="geometry">
        <rect>
         <x>159</x>
@@ -695,9 +695,9 @@ may not support this function!</string>
      <widget class="QLabel" name="label_13">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>30</x>
         <y>210</y>
-        <width>270</width>
+        <width>250</width>
         <height>2</height>
        </rect>
       </property>
@@ -1219,8 +1219,8 @@ usb-multi-protocol-three-disk-bo</string>
   <zorder>about_button</zorder>
   <zorder>about</zorder>
   <zorder>overview</zorder>
-  <zorder>boxmode</zorder>
   <zorder>sataconfig</zorder>
+  <zorder>boxmode</zorder>
  </widget>
  <resources>
   <include location="usm.qrc"/>
