--- a/ultra_enclosure_manager.ui
+++ b/ultra_enclosure_manager.ui
@@ -188,7 +188,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-121</y>
+       <y>0</y>
        <width>297</width>
        <height>470</height>
       </rect>
@@ -325,7 +325,7 @@ may not support this function!</string>
         <bool>false</bool>
        </property>
        <property name="text">
-        <string> Normal</string>
+        <string> Normal (PM)</string>
        </property>
        <property name="checked">
         <bool>true</bool>
@@ -1219,8 +1219,8 @@ usb-multi-protocol-three-disk-bo</string>
   <zorder>about_button</zorder>
   <zorder>about</zorder>
   <zorder>overview</zorder>
-  <zorder>sataconfig</zorder>
   <zorder>boxmode</zorder>
+  <zorder>sataconfig</zorder>
  </widget>
  <resources>
   <include location="usm.qrc"/>
